test/invalid/fc36956_TypeChecking_Conditionals3/Circle.plume
/**
 * Circle.plume
 *
 * @author Carlos Mao de Ferro
 * @version $Id: Circle.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class Circle extends GraphicObject is
     method override draw : () -> Boolean is
     	true
    
    method override resize : () -> Boolean is
    	true